--- a/style.css
+++ b/style.css
@@ -11,9 +11,10 @@ body{
 }
 
 .container{
+    min-height: 500px
     margin-left: auto;
     margin-right: auto;
-    width: 1024;
+    max-width: 1024;
     }
     
 
