--- a/style.css
+++ b/style.css
@@ -11,11 +11,18 @@ body{
 }
 
 .container{
-    min-height: 500px
+    min-height: 500px;
     margin-left: auto;
     margin-right: auto;
-    max-width: 1024;
+    display: flex; 
+    flex-wrap: wrap;
     }
+
+.col{
+background-color:#e93349;
+
+       
+}
     
 
 header{
