--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 
+html{height: 100%;}
+
+
 body{
     background-color:#e93349;
     background-size:cover;
@@ -7,13 +10,11 @@ body{
 
 }
 
-
-.col{
-    background-color:#e93349;
-    min-height: 200px;
-    width: 75%
-       
-}
+.container{
+    margin-left: auto;
+    margin-right: auto;
+    width: 1024;
+    }
     
 
 header{
@@ -37,7 +38,6 @@ main{
     text-align: left;
     padding-left: 240px;
     padding-right: 240px;
-
 }
 
 
