--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html{height: 100%;}
 
 
 body{
-    background-color:#d2a419;
+    background-color:#fbf4ea;
     background-size:cover;
     background-repeat: no-repeat;
     background-position: center;
