--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ font-size: 50px;
 
 p1 {  font-size: 34px;
     font-kerning: inherit;
-    color: black;
+    color: #000000;
     font-family: Arial, Helvetica, sans-serif;
 
     font-family: Arial, Helvetica, sans-serif;
@@ -62,7 +62,7 @@ p1 {  font-size: 34px;
 
 p2 {  font-size: 20px;
     font-kerning: inherit;
-    color: black;
+    color: #000000;
     font-family: Arial, Helvetica, sans-serif;
     color: black;
     font-family: Arial, Helvetica, sans-serif;
@@ -71,7 +71,7 @@ p2 {  font-size: 20px;
 
 
 a{
-color: black;
+color: #000000;
 font-family: Arial, Helvetica, sans-serif;
 }
 
